sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
var f = false
while(f == false){
	f = true


		for(i<- 0 to getNombreValeurs - 2){
		
			
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
			
			
		}
		
		for(i<- getNombreValeurs - 2 to 0 by -1){
		
			
				if(getValeur(j)>getValeur(j+1)){echange(j,j+1); f = false}
			
			
		}
}
}
